--- a/ui/article.html
+++ b/ui/article.html
@@ -1,6 +1,8 @@
+<!doctype html>
 <html>
-  <head>vijay</head>
+  <head><title>Vijay</title>
+  </head>
   <body>
     <h1>my name is vijay</h1>
-   </body>
- </html>  
+  </body>
+</html>  
