--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -17,14 +17,14 @@
     </div>
   
    <p id="demo">Hello</p>
- <button type=button onclick ="myfunction()">click</button>
+ <button type=button onclick =myfunction()>click</button>
  
  
  
   <script>
       function myfunction{
       document.getElementById("demo").innerHTML="MY NAME IS VIJAY"
-      };
+      }
   </script>
   
   
