[imad-console] Updates ui/articleone.html

--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -17,13 +17,13 @@
     </div>
   
    <p id="demo">Hello</p>
- <button type=button onclick =myfunction()>click</button>
+   <button type=text onclick ="myfunction()" > click</button>
  
- 
+  <p id="demo1"></p>
  
   <script>
       function myfunction{
-      document.getElementById("demo").innerHTML="MY NAME IS VIJAY"
+      document.getElementById("demo1").innerHTML="MY NAME IS VIJAY"
       }
   </script>
   
