[imad-console] Updates ui/articleone.html

--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -22,7 +22,7 @@
   <p id="demo1"></p>
  
   <script>
-      function myfunction{
+      function myfunction (){
       document.getElementById("demo1").innerHTML="MY NAME IS VIJAY"
       }
   </script>
