[imad-console] Updates ui/articleone.html

--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -17,7 +17,7 @@
     </div>
   
    <p id="demo">Hello</p>
-  
+  <button type=text onclick ="myfunction()" > click</button>
  
   <p id="demo1"></p>
  
