[imad-console] Updates ui/articleone.html

--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Vacation spot 1</h1>
-    <img src="https://www.pexels.com/photo/abandoned-forest-industry-nature-34950/">
+    <img src="https://www.pexels.com/photo/abandoned-forest-industry-nature-3495.jpg/">
     
     <div class="man">
         <h2>China</h2>
@@ -26,7 +26,7 @@
       document.getElementById("demo1").innerHTML="MY NAME IS VIJAY"
       }
   </script>
-  <button type=text onclick ="myfunction()" > click</button>
+ 
   
   
 
