[imad-console] Updates ui/articleone.html

--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-      
+      <link href="./ui/style.css" rel="stylesheet">
       
       <title>Vijay</title>
   </head>
@@ -19,11 +19,11 @@
    <p id="demo">Hello</p>
   <button type=text onclick ="myfunction()" > click</button>
  
-  <p id="demo1"></p>
+  <p class="demo1"></p>
  
   <script>
       function myfunction (){
-      document.getElementById("demo1").innerHTML="MY NAME IS VIJAY"
+      document.getElementByClass("demo1").innerHTML="MY NAME IS VIJAY \n"
       }
   </script>
  
