[imad-console] Updates ui/articleone.html

--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -19,11 +19,11 @@
    <p id="demo">Hello</p>
   <button type=text onclick ="myfunction()" > click</button>
  
-  <p class="demo1"></p>
+  <p id="demo1"></p>
  
   <script>
       function myfunction (){
-      document.getElementByClass("demo1").innerHTML="MY NAME IS VIJAY \n"
+      document.getElementById("demo1").innerHTML="MY NAME IS VIJAY \n"
       }
   </script>
  
