[imad-console] Updates ui/articleone.html

--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -23,7 +23,7 @@
  
   <script>
       function myfunction (){
-      document.getElementById("demo1").innerHTML="MY NAME IS VIJAY \n"
+      document.getElementById("demo1").innerHTML=<strong>"MY NAME IS VIJAY \n"</strong>
       }
   </script>
  
