--- a/ui/profile.html
+++ b/ui/profile.html
@@ -6,7 +6,7 @@
 </head>
    <body>
      <h1>Vijay Kothari</h1>
-      <img href=""/>
+      <img href="https://www.pexels.com/search/nature/"/>
      <hr>
     <h2>Place: Mumbai</h2> 
     <hr>
