[imad-console] Updates ui/profile.html

--- a/ui/profile.html
+++ b/ui/profile.html
@@ -6,7 +6,7 @@
 </head>
    <body>
      <h1>Vijay Kothari</h1>
-      <img href="https://www.pexels.com/search/nature/"/>
+      <img href=".\c:\users\ashish\pictures\butterfly.jpg\">
      <hr>
     <h2>Place: Mumbai</h2> 
     <hr>
