[imad-console] Updates ui/profile.html

--- a/ui/profile.html
+++ b/ui/profile.html
@@ -6,7 +6,7 @@
 </head>
    <body>
      <h1>Vijay Kothari</h1>
-      <img href=".\c:\users\ashish\pictures\butterfly.jpg\">
+      <img href="https://scontent.fbom2-1.fna.fbcdn.net/v/t1.0-9/13731614_1142106992512898_6463596127264547477_n.jpg?oh=48ba1d06d341538d1a2cbeb860728a88&oe=5B02A0CB.png">
      <hr>
     <h2>Place: Mumbai</h2> 
     <hr>
