[imad-console] Updates ui/profile.html

--- a/ui/profile.html
+++ b/ui/profile.html
@@ -6,7 +6,7 @@
 </head>
    <body>
      <h1>Vijay Kothari</h1>
-      <img src="https://static.xx.fbcdn.net/rsrc.php/v3/yy/r/5YPLqTIXFfT.png"/>
+      <img src="http://drive.google.com/wc?id=BXbwv6mEoYRU4tNHFGTUNCTXM"/>
      <hr>
     <h2>Place: Mumbai</h2> 
     <hr>
