--- a/ui/profile.html
+++ b/ui/profile.html
@@ -6,7 +6,7 @@
 </head>
    <body>
      <h1>Vijay Kothari</h1>
-      <img src="http://drive.google.com/wc?id=BXbwv6mEoYRU4tNHFGTUNCTXM"/>
+      <img src="VijayPhoto3.jpg"/>
      <hr>
     <h2>Place: Mumbai</h2> 
     <hr>
