[imad-console] Updates ui/profile.html

--- a/ui/profile.html
+++ b/ui/profile.html
@@ -28,9 +28,9 @@
       }
     </script>
     
-        <button type=text onclick="myfunction1()"><strong>Quote</strong></button>
+       
         <script>
-      function myfunction1(){
+      function myfunction(){
         document.getElementById("demo1").innerHTML="none"
       }
     </script>
