--- a/ui/profile.html
+++ b/ui/profile.html
@@ -19,7 +19,7 @@
     </div>
     <hr>
     
-    <button type=text onclick="myfunction()" offclick="myfunction1()" ><strong>Quote</strong></button>
+    <button type=text onclick="myfunction()" onclick1="myfunction1()" ><strong>Quote</strong></button>
     <p id ="demo1"></p>
     
     <script>
