--- a/ui/profile.html
+++ b/ui/profile.html
@@ -32,7 +32,7 @@
     <button class="vijay" type=text onclick="myfunction1()"  ><strong>Hide Quote</strong></button>
      <script>
       function myfunction1(){
-        document.getElementById("demo1").innerHTML=none
+        document.getElementById("demo1").innerHTML=null
       }
     </script>
     
