[imad-console] Updates ui/profile.html

--- a/ui/profile.html
+++ b/ui/profile.html
@@ -6,13 +6,13 @@
 </head>
    <body>
      <h1>Vijay Kothari</h1>
-      <img src=""/>
+      <img src="https://pbs.twimg.com/profile_images/585474877743837185/yIl-Mspx_400x400.jpg"/>
      <hr>
     <h2>Place: Mumbai</h2> 
     <hr>
     <div class="hobby">
         <h2>Hobby: Playing Badminton and Coding</h2>
-    </div>
+    </div>https://pbs.twimg.com/profile_images/585474877743837185/yIl-Mspx_400x400.jpg
     <hr>
     <div href="college">
         <h2>Dj Sanghvi College of Engineering</h2>
