--- a/ui/profile.html
+++ b/ui/profile.html
@@ -12,7 +12,7 @@
     <hr>
     <div class="hobby">
         <h2>Hobby: Playing Badminton and Coding</h2>
-    </div>https://pbs.twimg.com/profile_images/585474877743837185/yIl-Mspx_400x400.jpg
+    </div>
     <hr>
     <div href="college">
         <h2>Dj Sanghvi College of Engineering</h2>
