--- a/ui/profile.html
+++ b/ui/profile.html
@@ -6,7 +6,9 @@
 </head>
    <body>
      <h1>Vijay Kothari</h1>
-      <img src="https://pbs.twimg.com/profile_images/585474877743837185/yIl-Mspx_400x400.jpg"/>
+      <div class="image">
+      <img  src="https://pbs.twimg.com/profile_images/585474877743837185/yIl-Mspx_400x400.jpg"/>
+     </div>
      <hr>
     <h2>Place: Mumbai</h2> 
     <hr>
