--- a/ui/profile.html
+++ b/ui/profile.html
@@ -26,7 +26,7 @@
     
     <script>
       function myfunction(){
-        document.getElementById("demo1").innerHTML="<strong>THERE IS NO SHORTCUT TO SUCCESS</strong>"+"\n"+"<strong>WORK HARD</strong>"
+        document.getElementById("demo1").innerHTML="<strong>THERE IS NO SHORTCUT TO SUCCESS</strong>"+"<br />"+"<strong>WORK HARD</strong>"
        
       }
     </script>
