[imad-console] Updates ui/articleone.html

--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -20,9 +20,13 @@
   <button type=text onclick ="myfunction()" > click</button>
  
   <p id="demo1"></p>
- 
+  
   <script>
-      function myfunction (){
+      var n=0;
+      if(onclick===true){
+          n++
+      }
+      if (n%2===0)function myfunction (){
       document.getElementById("demo1").innerHTML="<strong>MY NAME IS VIJAY</strong> "
       }
   </script>
