[imad-console] Updates ui/articleone.html

--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -26,9 +26,15 @@
       if(onclick===true){
           n++
       }
-      if (n%2===0)function myfunction (){
+      if (n%2===0){
+          function myfunction (){
       document.getElementById("demo1").innerHTML="<strong>MY NAME IS VIJAY</strong> "
-      }
+      }};
+      else{
+           function myfunction (){
+      document.getElementById("demo1").innerHTML=null
+      }};
+      
   </script>
  
   
