--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -34,7 +34,7 @@
            function myfunction (){
       document.getElementById("demo1").innerHTML=null
       }};
-      
+      console.log(n)
   </script>
  
   
