--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -23,14 +23,14 @@
   
   <script>
       var n=0;
-      if(onclick===true){
+      if(this.onclick===true){
           n++
       }
       if (n%2===0){
           function myfunction (){
       document.getElementById("demo1").innerHTML="<strong>MY NAME IS VIJAY</strong> "
       }};
-      else{
+      else {
            function myfunction (){
       document.getElementById("demo1").innerHTML=null
       }};
