--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -22,16 +22,19 @@
   <p id="demo1"></p>
   
   <script>
+      function myfunction(){
       var n=0;
       if(this.onclick===true){
           n++
       }
       if (n%2===0){
-          function myfunction (){
+          {
       document.getElementById("demo1").innerHTML="<strong>MY NAME IS VIJAY</strong> "
-      }};
-     
-      console.log(n)
+      }
+     else{
+         document.getElementById("demo1").innerHTML=null
+     }
+      }
   </script>
  
   
