[imad-console] Updates ui/articleone.html

--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -24,7 +24,7 @@
   <script>
       function myfunction(){
       var n=0;
-      if(this.onclick===true){
+      if(button===true){
           n++
       }
       if (n%2===0){
