--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -17,21 +17,21 @@
     </div>
   
    <p id="demo">Hello</p>
-  <button type=text onclick ="myfunction()" > click</button>
+  <button type=text onclick ="myfunction(n)" > click</button>
  
   <p id="demo1"></p>
   
   <script>
-      function myfunction(){
+      function myfunction(n){
       var n=0;
-      if(button===true){
+      if(onclick===true){
           n++
       }
       if (n%2===0){
           {
       document.getElementById("demo1").innerHTML="<strong>MY NAME IS VIJAY</strong> "
       }
-      }
+    return n;  }
   </script>
  
   
