--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -17,21 +17,15 @@
     </div>
   
    <p id="demo">Hello</p>
-  <button type=text onclick ="myfunction(n)" > click</button>
+  <button type=text onclick ="n" > click</button>
  
   <p id="demo1"></p>
   
   <script>
-      function myfunction(n){
-      var n=0;
-      if(onclick===true){
-          n++
+     var n=0;
+      if (n===true){
+          n=n+1;
       }
-      if (n%2===0){
-          {
-      document.getElementById("demo1").innerHTML="<strong>MY NAME IS VIJAY</strong> "
-      }
-    return n;  }
   </script>
  
   
