[imad-console] Updates ui/articleone.html

--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -17,13 +17,13 @@
     </div>
   
    <p id="demo">Hello</p>
-  <button type=text onclick ="n" > click</button>
+  <button type=text onclick =true > click</button>
  
   <p id="demo1"></p>
   
   <script>
      var n=0;
-      if (n===true){
+      if (onclick===true){
           n=n+1;
       }
       console.log(n)
