[imad-console] Updates ui/articleone.html

--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -22,11 +22,10 @@
   <p id="demo1"></p>
   
   <script>
-     var n=0;
-      if (onclick===true){
-          n=n+1;
-      }
-      console.log(n)
+     var n1=0;
+    var n2=5;
+    r=n1+n2;
+      console.log(r)
   </script>
  
   
