[imad-console] Updates ui/articleone.html

--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -22,9 +22,9 @@
   <p id="demo1"></p>
   
   <script>
-     var n1=0;
-    var n2=5;
-    r=n1+n2;
+    var n1=0
+    var n2=5
+    r=n1+n2
       console.log(r)
   </script>
  
