[imad-console] Updates ui/articleone.html

--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -17,9 +17,10 @@
     </div>
  
   <script>
-    var n1=0
-    var n2=5
-    r=n1+n2
+    var n1=0;
+    var n2=5;
+    var r;
+    r=n1+n2;
     console.log(n1)
   </script>
  
