[imad-console] Updates ui/articleone.html

--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -23,6 +23,15 @@
         </p>
     </div>
  
+ <p id="man">
+     </p>
+ 
+   <script>
+       var x =5;
+       document.getElementById("man").innerHTML="the value is"+x
+       
+   </script>  
+ 
   
  
   
