--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -28,7 +28,7 @@
  
    <script>
        var x =5;
-       document.getElementById("man").innerHTML="the value is"+x
+       document.getElementById("man").innerHTML prompt("the number is ")
        
    </script>  
  
