--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -22,14 +22,15 @@
            A city in the midst of reinventing itself and continuing to build on the success of the 2008 Summer Olympics, Beijing is a place of frenzied construction. New housing, new roads, and new sports venues seem to spring up overnight. At the same time, the capital of the Peoples Republic of China remains an epicenter of tradition, with the treasures of nearly 2,000 years as the imperial capital still on viewin the famed Forbidden City and in the luxuriant pavilions and gardens of the Summer Palace.
         </p>
     </div>
- 
+ <button type=text onclick=myfunction> Press button for email</button>
  <p id="man">
      </p>
  
    <script>
+      function myfunction{
        var x =5;
-       document.getElementById("man").innerHTML = prompt("the number is ");
-       
+       document.getElementById("man").innerHTML = window.alert("vijaykothari97@gmail.com");
+      }
    </script>  
  
   
