--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -29,7 +29,7 @@
    <script>
       function myfunction{
        var x =5;
-       document.getElementById("man").innerHTML =  window.alert(hy)
+       document.getElementById("man").innerHTML =  prompt("hy");
       }
    </script>  
  
