--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -29,7 +29,7 @@
    <script>
       function myfunction(){
        var x =5;
-       document.getElementById("man").innerHTML =  window.alert(`<a href="vijaykothari97@gmail.com">visited</a>`)+ "Visited";
+       document.getElementById("man").innerHTML = <a href="#vijaykothari97@gmail.com"alt="email id"></a>;
       }
    </script>  
  
