--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -28,9 +28,20 @@
  
    <script>
       function myfunction(){
-       var x =5;
+       var onclick =0;
+       if (onclick%2===0){
        document.getElementById("man").innerHTML = "#vijaykothari97@gmail.com"
+      
+           onclick++
+       }
+  if (onclick%2!==0){
+     
+     document.getElementById("man").innrHTML=null
+  
+      onclick++
+  }
       }
+  
    </script>  
  
   
