--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -29,12 +29,12 @@
    <script>
       function myfunction(){
        var onclick =0;
-       if (onclick%2===0){
+       if (this.onclick%2===0){
        document.getElementById("man").innerHTML = "#vijaykothari97@gmail.com"
       
            onclick++
        }
-  if (onclick%2!==0){
+  if (this.onclick%2!==0){
      
      document.getElementById("man").innrHTML=null
   
