--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -23,7 +23,7 @@
         </p>
     </div>
  <button type=text onclick="myfunction()"> Press button for email</button>
- <p id="man"><a href="https://mail.google.com/mail/u/0/#inbox">email id</a>
+ <p id="man">
      </p>
  
    <script>
