[imad-console] Updates ui/articleone.html

--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -23,8 +23,7 @@
         </p>
     </div>
  <button type=text onclick="myfunction()"> Press button for email</button>
- <p id="man">
-     </p>
+ <p id="man"> </p>
  
    <script>
   function myfunction(){
