[imad-console] Updates ui/profile.html

--- a/ui/profile.html
+++ b/ui/profile.html
@@ -35,9 +35,9 @@
         document.getElementById("demo1").innerHTML="<ol><li><strong>THERE IS NO SHORTCUT TO SUCCESS</strong></li><br/><li>WORK HARD</li></ol>"
        }
      function myfunction1(){
-        document.getElementById("demo1").innerHTML=null
+        document.getElementById("demo1").innerHTML=null+"<br/>"
       }
-   function myfunction3(){
+ function myfunction3(){
       document.getElementById("man").innerHTML ="<br/>email id"
      }
     </script>
