--- a/ui/profile.html
+++ b/ui/profile.html
@@ -30,7 +30,7 @@
     <button type=text onclick="myfunction3()"> Press button for email</button>
      <a id ="man" href="https://mail.google.com/mail/u/0/#inbox"></a>
  
-   
+   //JAVASCRIPT//
     <script>
       function myfunction(){
         document.getElementById("demo1").innerHTML="<ol><li><strong>THERE IS NO SHORTCUT TO SUCCESS</strong></li><br/><li>WORK HARD</li></ol>"
@@ -39,7 +39,7 @@
         document.getElementById("demo1").innerHTML=null+"<br/>"
       }
  function myfunction3(){
-      document.getElementById("man").innerHTML ="<br/>email id"
+      document.getElementById("man").innerHTML ="<br/><strong>Email id</strong>"
      }
     </script>
     
