--- a/ui/profile.html
+++ b/ui/profile.html
@@ -27,7 +27,7 @@
     <button class="vijay" type=text onclick="myfunction1()"  ><strong>Hide Quote</strong></button>
        <p><br/></p>
    
-    <button type=text onclick="myfunction3()"> Press button for email</button>
+    <button class ="vijay1" type=text onclick="myfunction3()"> Press button for email</button>
      <a id ="man" href="https://mail.google.com/mail/u/0/#inbox"></a>
  
    
