--- a/ui/profile.html
+++ b/ui/profile.html
@@ -36,7 +36,7 @@
         document.getElementById("demo1").innerHTML="<ol><li><strong>THERE IS NO SHORTCUT TO SUCCESS</strong></li><br/><li>WORK HARD</li></ol>"
        }
      function myfunction1(){
-        document.getElementById("demo1").innerHTML=null+"<br/>"
+        document.getElementById("demo1").innerHTML = null
       }
  function myfunction3(){
       document.getElementById("man").innerHTML ="<br/><strong>Email id</strong>"
