[imad-console] Updates ui/profile.html

--- a/ui/profile.html
+++ b/ui/profile.html
@@ -30,7 +30,7 @@
     <button class ="vijay1"  type=text onclick="myfunction2()"> Press button for email</button>
      <a id ="man" href="https://mail.google.com/mail/u/0/#inbox"></a>
 
-    <button class ="vijay2"  type=text onclick="myfunction3()"> Calculator</button>
+    <button class ="vijay2"  type=text onclick="myfunction3()">Calculator</button>
       <p id ="demo2"></p>
     
     
@@ -48,7 +48,7 @@
        function myfunction3(){
         var n1,n2,n3;
          n3=n1+n2;
-         document.getElementById("demo2").innerHTML = prompt("the addition is "+n3)
+         document.getElementById("demo2").innerHTML ="the result is "+n3
       }
    
    
