--- a/ui/profile.html
+++ b/ui/profile.html
@@ -50,7 +50,8 @@
        function myfunction3(){
         var n1=prompt("the first number is" );
         var n2 = prompt("the second number is ")
-        var n3=n1+n2
+        var n3;
+        n3=n1+n2;
         
          document.getElementById("demo2").innerHTML ="the result is "+n3
       }
