--- a/ui/profile.html
+++ b/ui/profile.html
@@ -48,9 +48,10 @@
      }
    
        function myfunction3(){
-       var n1=5
-       var n2=6
-       var n3=n1+n2
+       var n1=parseInt(prompt("the first number is" ));
+        var n2 =parseInt( prompt("the second number is "));
+        var n3;
+        n3=n1+n2;
         
          document.getElementById("demo2").innerHTML ="the result is "+n3
       }
