[imad-console] Updates ui/profile.html

--- a/ui/profile.html
+++ b/ui/profile.html
@@ -21,10 +21,10 @@
     </div>
     <hr>
     
-    <button type=text onclick="myfunction()"  ><strong>Quote</strong></button>
+    <button type=text onclick="myfunction()"  ><strong>Quotes</strong></button>
     <p id ="demo1"></p>
    
-    <button class="vijay" type=text onclick="myfunction1()"  ><strong>Hide Quote</strong></button>
+    <button class="vijay" type=text onclick="myfunction1()"  ><strong>Hide Quotes</strong></button>
        <p><br/></p>
    
     <button class ="vijay1"  type=text onclick="myfunction2()"> Press button for email</button>
