[imad-console] Updates ui/profile.html

--- a/ui/profile.html
+++ b/ui/profile.html
@@ -20,6 +20,8 @@
         <h2>Dj Sanghvi College of Engineering</h2>
     </div>
     <hr>
+    <h2>Important links:</h2>
+      <a href="http://codeacedemy.com"> Coding link</a>
     
     <button type=text onclick="myfunction()"  ><strong>Quotes</strong></button>
     <p id ="demo1"></p>
