[imad-console] Updates ui/articleone.html

--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -25,6 +25,8 @@
  <button type=text onclick="myfunction()"> Press button for email</button>
    <a id ="man" href="https://mail.google.com/mail/u/0/#inbox"></a>
  
+  <button class ="vijay2"  type=text onclick="myfunction1()">Press for Calculator</button>
+      <p id ="hy"></p>
    <script>
   function myfunction(){
     
@@ -36,6 +38,10 @@
   
   }
   
+  function myfunction1(){
+      
+             document.getElementById("hy").innerHTML =parseInt(prompt("the number is"+prompt("the second number is ")))
+  }
    </script>  
  
   
