[imad-console] Updates ui/articleone.html

--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -39,8 +39,8 @@
   }
   
   function myfunction1(){
-      
-             document.getElementById("hy").innerHTML =parseInt(prompt("the number is"+prompt("the second number is ")))
+      var n1,n2,n3;
+             document.getElementById("hy").innerHTML =parseInt(prompt("n3"="n1+n2")
   }
    </script>  
  
