[imad-console] Updates ui/articleone.html

--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -40,7 +40,7 @@
   
   function myfunction1(){
       var n1,n2,n3;
-             document.getElementById("hy").innerHTML =parseInt(prompt("n3"="n1+n2")
+             document.getElementById("hy").innerHTML =parseInt(prompt("n3"="n1+n2"));
   }
    </script>  
  
