--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -39,8 +39,8 @@
   }
   
   function myfunction1(){
-      var n1,n2,n3;
-             document.getElementById("hy").innerHTML =parseInt(prompt("n3"="n1"+"n2"));
+      var= n1,n2,n3;
+     document.getElementById("hy").innerHTML = prompt(parseInt(n1),parseInt(n2));
   }
    </script>  
  
