[imad-console] Updates ui/articleone.html

--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -44,7 +44,7 @@
     {
         n3=n1+n2;
     }
-     document.getElementById("hy").innerHTML = prompt(parseInt(n1)"n3"parseInt(n2));
+     document.getElementById("hy").innerHTML = prompt(parseInt(n1)+"n3"+parseInt(n2));
   }
    </script>  
  
