--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -40,12 +40,13 @@
       var n1;
       var n2;
       var n3;
-    if(n3==="+")
-    {
-        n3=n1+n2;
-    }
-     document.getElementById("hy").innerHTML = prompt(parseInt(n1)+"n3"+parseInt(n2));
-  }
+   
+    
+     document.getElementById("hy").innerHTML = prompt(parseInt(n1)+"n3"+parseInt(n2) if(n3==="+"){
+         n3=n1+n2;
+     });
+ }
+ 
    </script>  
  
   
