--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -42,7 +42,7 @@
       var n3;
    
     
-     document.getElementById("hy").innerHTML = prompt(parseInt(n1)+"n3"+parseInt(n2) if(n3==="+"){
+     document.getElementById("hy").innerHTML = prompt(parseInt(n1)+"n3"+parseInt(n2), if(n3==="+"){
          n3=n1+n2;
      });
  }
