[imad-console] Updates ui/articleone.html

--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -40,10 +40,10 @@
       var n1;
       var n2;
       var n3;
-   
+   var n4;
     
      document.getElementById("hy").innerHTML = prompt(parseInt(n1)+"n3"+parseInt(n2), if(n3==="+"){
-         n3=n1+n2;
+         n4=n1+n2;
      });
  }
  
