--- a/ui/profile.html
+++ b/ui/profile.html
@@ -7,7 +7,7 @@
    <body>
      <h1>Vijay Kothari</h1>
       <div class="image">
-      <img  src="https://pbs.twimg.com/profile_images/971139497235804160/6KBExrj4_400x400.jpg"/>
+      <img  src="https://pbs.twimg.com/profile_images/971139497235804160/6KBExrj4_400x400.jpg" width="100" height="100"/>
      </div>
      <hr>
     <h2>Place: Mumbai</h2> 
