--- a/ui/profile.html
+++ b/ui/profile.html
@@ -44,7 +44,7 @@
         document.getElementById("demo1").innerHTML = null
       }
      function myfunction2(){
-        document.getElementById("man").innerHTML ="<br/><strong>Email id</strong>"
+        document.getElementById("man").innerHTML ="<br/><strong><style>color:black; Email id</style></strong>"
      }
      function myfunction3(){
        var n1=parseInt(prompt("the first number is" ))
