--- a/ui/profile.html
+++ b/ui/profile.html
@@ -28,7 +28,7 @@
        <p><br/></p>
    
     <button class ="vijay1"  type=text onclick="myfunction2()"> Press button for email</button>
-     <a id ="man" href="https://mail.google.com/mail/u/0/#inbox"></a>
+     <a id ="man" href="https://mail.google.com/"></a>
      
      <p><br/></p>
     
