[imad-console] Updates ui/articleone.html

--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -39,7 +39,7 @@
   function myfunction1() {
       var n1;
       var n2;
-      var n3;
+      var n3;https://imad.hasura.io/code/files/ui%2Farticleone.html
    var n4;
     
      document.getElementById("hy").innerHTML = prompt(parseInt(n1)+"n3"+parseInt(n2), if(n3==="+"){
@@ -48,7 +48,11 @@
  }
  
    </script>  
- 
+ <form>
+     
+<input type="text" name="uname" value="uname">
+
+ </form>
   
  
   
