[imad-console] Updates ui/articleone.html

--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -49,8 +49,9 @@
  
    </script>  
  <form>
-     Firstname
-<input type="text" name="uname" value="uname">
+action=/action_php
+      Firstname
+<input type="<p>text</p>" name="uname" value="uname">
 
  </form>
   
