[imad-console] Updates ui/articleone.html

--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -48,8 +48,8 @@
  }
  
    </script>  
- <form>
-action=/action_php
+ <form
+action="/action_page.php">
       Firstname
 <input type="<p>text</p>" name="uname" value="uname">
 
