--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -52,7 +52,8 @@
 action="/action_page.php">
       Firstname
 <input type="<p>text</p>" name="uname" value="uname">
-
+<br>
+<input type="submit" name="Submit">
  </form>
   
  
