[imad-console] Updates ui/articleone.html

--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -54,10 +54,11 @@
       
              }
    </script>  
- <form >
+ <form>
+FIRSTNAME
 <input type="text" name="uname" value="uname">
 <br>
-<input type="submit" name="Submit">
+
  </form>
   
  
