[imad-console] Updates ui/articleone.html

--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -56,7 +56,7 @@
    </script>  
  <form>
 FIRSTNAME
-<input type="text" name="uname" value="uname">
+<input type="PARAGRAPH" name="uname" value="uname">
 <br>
 
  </form>
