[imad-console] Updates ui/articleone.html

--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -54,7 +54,10 @@
       
              }
    </script>  
- <form>
+ <textarea rows="6"
+columns="10" ></textarea>
+
+<form>
 FIRSTNAME
 <input type="textarea" name="uname" value="uname">
 
