[imad-console] Updates ui/articleone.html

--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -54,9 +54,9 @@
       
              }
    </script>  
- <textarea rows="6"
+ <textarea SOMETHING YOU WOULD ADD OVER HERE rows="6"
 columns="10" ></textarea>
-
+<BR>
 <form>
 FIRSTNAME
 <input type="textarea" name="uname" value="uname">
