[imad-console] Updates ui/articleone.html

--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -54,8 +54,8 @@
       
              }
    </script>  
- <textarea SOMETHING YOU WOULD ADD OVER HERE rows="6"
-columns="10" ></textarea>
+ <textarea  rows="6"
+columns="10" >HY</textarea>
 <BR>
 <form>
 FIRSTNAME
