[imad-console] Updates ui/articleone.html

--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -55,7 +55,7 @@
              }
    </script>  
  <textarea  rows="6"
-columns="10" >HY</textarea>
+columns="10" value="wassup" ></textarea>
 <BR>
 <form>
 FIRSTNAME
