[imad-console] Updates ui/articleone.html

--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -54,9 +54,13 @@
       
              }
    </script>  
+<form>
+    hello
  <textarea  rows="6"
 columns="10" value="wassup" ></textarea>
 <BR>
+</form>
+
 <form>
 FIRSTNAME
 <input type="textarea" name="uname" value="uname">
