[imad-console] Updates ui/articleone.html

--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -55,7 +55,7 @@
              }
    </script>  
 <form>
-    hello
+    ADD ANYTHING YOU FEEL LIKE 
  <textarea  rows="6"
 columns="10" value="wassup" ></textarea>
 <BR>
