[imad-console] Updates ui/articleone.html

--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -58,13 +58,15 @@
     ADD ANYTHING YOU FEEL LIKE 
  <textarea  rows="6"
 columns="10" value="wassup" ></textarea>
-<br>
+<br/>
 </form>
-<br>
-<form>
+<br/>
+<form
+action="/action.php">
 FIRSTNAME
 <input type="textarea" name="uname" value="uname">
-
+<br/>
+<input type="submit" name="submit">
 <br>
 
  </form>
