--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -70,7 +70,7 @@ FIRSTNAME
 <br>
 
  </form>
-<script>"text/javascript" href="./ui/main.js" </script>  
+<script> src="./ui/main.js" </script>  
  <p id="he"></p>
 
 
