--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -13,7 +13,7 @@
       <title>Vijay</title>
   </head>
   <body>
-    <script> src="ui/main.js" </script>  
+    <script> "text/javascript" src="ui/main.js" </script>  
     <h1>Vacation spot 1</h1>
     <img src="https://www.pexels.com/photo/abandoned-forest-industry-nature-3495.jpg/">
     
