[imad-console] Updates ui/articleone.html

--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -2,18 +2,12 @@
 <html>
   <head>
       <link href="./ui/style.css" rel="stylesheet">
-      <script>
-    var n1=0;
-    var n2=5;
-    var r;
-    r=n1+n2;
-    console.log(n1)
-  </script>
+      
  
       <title>Vijay</title>
   </head>
   <body>
-    <script> "text/javascript" src="ui/main.js" </script>  
+    <script> type="text/javascript" src="/ui/main.js" </script>  
     <h1>Vacation spot 1</h1>
     <img src="https://www.pexels.com/photo/abandoned-forest-industry-nature-3495.jpg/">
     
