[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,6 +10,8 @@
         <br>
         <div id ="he" class="center text-big bold">
             Hi! wassup!
+        <input type="button" placeholder="hy" id="hello" >
+       
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
