--- a/ui/index.html
+++ b/ui/index.html
@@ -10,9 +10,10 @@
         <br>
         <div id ="he" class="center text-big bold">
             Hi! wassup!
-        <input type="button" placeholder="hy" id="hello" >
        
-        </div>
+       
+        </div> 
+        <input> type="button"  id="hello"</input>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
