--- a/ui/index.html
+++ b/ui/index.html
@@ -13,7 +13,7 @@
        
        
         </div> 
-        <input type="button"  id="hello">
+        <input name="vjay" type="button"  id="hello">
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
