--- a/ui/index.html
+++ b/ui/index.html
@@ -13,7 +13,7 @@
        
        
         </div> 
-        <button > type="text"  id="hello">hh</button>
+        <button  type="text"  id="hello">hh</button>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
