--- a/ui/index.html
+++ b/ui/index.html
@@ -15,6 +15,7 @@
         </div> 
         <button   id="hello"  >press</button>
         <p id="vj1" ></p>
+        <input id="hey" type="text" > 
         <script type="text/javascript" src="/ui/main.js">
     
         </script>
