[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -15,7 +15,9 @@
         </div> 
         <button   id="hello"  >press</button>
         <p id="vj1" ></p>
-        <input id="hey" type="text" > 
+        <input id="name" type="text" > 
+       <input id ="submit_btn" type="submit" value="Submit">
+       <p id="vj2" ></p>
         <script type="text/javascript" src="/ui/main.js">
     
         </script>
