[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -17,7 +17,7 @@
         <p id="vj1" ></p>
         <input id="name" type="text" > 
        <input id ="submit_btn" type="submit" value="Submit">
-       <h3 id="vj2" ></h3>
+       <span id="vj2" ></span>
         
         <script type="text/javascript" src="/ui/main.js">
     
