--- a/ui/index.html
+++ b/ui/index.html
@@ -17,7 +17,7 @@
         <p id="vj1" ></p>
         <input id="name" type="text" > 
        <input id ="submit_btn" type="submit" value="Submit">
-       <p id="vj2" ></p>
+       <p id="demo" ></p>
         
         <script type="text/javascript" src="/ui/main.js">
     
