[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -17,7 +17,7 @@
         <input id="name1" type="text" placeholder="name"  > 
        <button id ="submit_btn" type="text" value="Submit">Submit</button>
        <br/>
-        <p id="demo" ></p>
+        <p id="demo" >hello</p>
         
         <script type="text/javascript" src="/ui/main.js">
     
