[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -14,7 +14,7 @@
        
         </div> 
        
-        <input id="name1" type="text" placeholder="name"  > 
+        <input id="name" type="text" placeholder="name"  > 
        <button id ="submit_btn" type="text" value="Submit">Submit</button>
        <br/>
         <p id="demo" ></p>
