--- a/ui/index.html
+++ b/ui/index.html
@@ -18,7 +18,7 @@
         </div> 
        
         <input  type="text" id="name" placeholder="name"  ></input>
-       <input type="submit" value="Submit" id ="submit_btn" ></input>
+       <input type="submit"  id ="submit_btn" >submit</input>
        
         <ul id="demo">
              </ul>
