[imad-console] Updates ui/profile.html

--- a/ui/profile.html
+++ b/ui/profile.html
@@ -7,8 +7,10 @@
    <body>
      <h1>Vijay Kothari</h1>
       <div class="image">
-      <img  src="https://pbs.twimg.com/profile_images/971139497235804160/6KBExrj4_400x400.jpg" width="300" height="300"/>
-     </div>
+      <img  src="https://pbs.twimg.com/profile_images/971139497235804160/6KBExrj4_400x400.jpg" width="300" height="300"/>     
+      <br/>
+      <button type="text" id="btn1" >LIKE</button>
+      </div>
      <hr>
     <h2>Place: Mumbai</h2> 
     <hr>
