[imad-console] Updates ui/profile.html

--- a/ui/profile.html
+++ b/ui/profile.html
@@ -7,9 +7,11 @@
    <body>
      <h1>Vijay Kothari</h1>
       <div class="image">
+      <br/>
       <img  src="https://pbs.twimg.com/profile_images/971139497235804160/6KBExrj4_400x400.jpg" width="300" height="300"/>     
       <br/>
-      <button type="text"  onclick="myfunction4()">LIKE<span id="can"></span></button>
+      <br/>
+      <button type="text"  onclick="myfunction4()">LIKE</button> <span id="can">counter</span>
       </div>
      <hr>
     <h2>Place: Mumbai</h2> 
