[imad-console] Updates ui/profile.html

--- a/ui/profile.html
+++ b/ui/profile.html
@@ -11,7 +11,7 @@
       <img  src="https://pbs.twimg.com/profile_images/971139497235804160/6KBExrj4_400x400.jpg" width="300" height="300"/>     
       <br/>
       <br/>
-      <button type="text"  onclick="myfunction4()">LIKE</button> <span id="can">counter</span>
+      <button type="text"  onclick="myfunction4()">LIKE</button> <span id="can">0</span>
       </div>
      <hr>
     <h2>Place: Mumbai</h2> 
