[imad-console] Updates ui/profile.html

--- a/ui/profile.html
+++ b/ui/profile.html
@@ -103,7 +103,8 @@
  }
        
        function myfunction5(){
-           document.getElementById("can").innerHTML=null
+          this. counter=counter - 1; 
+           document.getElementById("can").innerHTML=counter.toString();
        }
        
         </script>
