--- a/ui/profile.html
+++ b/ui/profile.html
@@ -15,7 +15,7 @@
       </div>
       <button type="text"  onclick="myfunction4()">LIKE</button> <span id="can">0</span>
      <br/>
-      <button type="text" id="can2"  onclick="myfunction5()">dislike</button>
+      <button type="text"   onclick="myfunction5()">dislike</button>
      <hr>
     <h2>Place: Mumbai</h2> 
     <hr>
