--- a/ui/index.html
+++ b/ui/index.html
@@ -18,7 +18,7 @@
         </div> 
        <div>
         <input  type="text" id="name" placeholder="name"  >
-       <button type="text" value= "Submit" id="submit_btn" ></button>
+       <button type="text"  id="submit_btn" >SUBMIT</button>
        
        
       <ul id="demo">
