[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -18,7 +18,7 @@
         </div> 
        <div>
         <input  type="text" id="name" placeholder="name"  >
-       <button type="text"  id="submit_btn" >SUBMIT</button>
+       <input type="button"  id="submit_btn" >
        
        
       <ul id="demo">
