[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -17,7 +17,7 @@
         </div> 
        <div>
         <input  type="text" id="name" placeholder="name"  >
-       <input type="button"  id="submit_btn" >
+       <input type="button" value="submit" id="submit_btn" >
        
        
       <ul id="demo">
