--- a/ui/profile.html
+++ b/ui/profile.html
@@ -13,8 +13,8 @@
       <br/>
     
       </div>
-      <div class ="btn3">
-      <button type="text"  onclick="myfunction4()">LIKE</button> <span id="can">0</span>
+      <div >
+      <button type="text" id="btn3"  onclick="myfunction4()">LIKE</button> <span id="can">0</span>
      <br/>
       </div>
      
