--- a/ui/profile.html
+++ b/ui/profile.html
@@ -41,7 +41,7 @@
        <p><br/></p>
    
     <button class ="vijay1"  type=text onclick="myfunction2()"> Press button for email</button>
-    <a id ="man1" href="https://mail.google.com/mail/u/0/"></a>
+    <a id ="man" href="https://mail.google.com/mail/u/0/"></a>
      
      <p><br/></p>
     
