[imad-console] Updates ui/profile.html

--- a/ui/profile.html
+++ b/ui/profile.html
@@ -84,7 +84,7 @@
        if (n4==="/"){
            n3=n1 /n2;
        }
-       if(n1===null){
+       if(n1== null){
            
            console.log( "The result is undefined")
        }
