[imad-console] Updates ui/profile.html

--- a/ui/profile.html
+++ b/ui/profile.html
@@ -20,7 +20,9 @@
     
       </div>
       <div >
-      <button type="text" id="btn3"  onclick="myfunction4()">LIKE</button> <span id="can">0</span>
+      <span id="can">0</span>
+     <br/>
+      <button type="text" id="btn3"  onclick="myfunction4()">LIKE</button> 
      <br/>
       </div>
      
