--- a/ui/profile.html
+++ b/ui/profile.html
@@ -20,11 +20,11 @@
     
       </div>
       <div class="w3-center">
-     <div class="bar">
+     <div class="w3-bar">
       <span id="can">0</span>
      <br/>
      <br/>
-      <button class="w3-button w3-lightblue" align="right" width="90" type="text"   onclick="myfunction4()">LIKE</button> 
+      <button class="w3-button w3-lightblue"  type="text"   onclick="myfunction4()">LIKE</button> 
      <br/>
       </div>
      </div>
