--- a/ui/profile.html
+++ b/ui/profile.html
@@ -24,7 +24,7 @@
       <span id="can">0</span>
      <br/>
      <br/>
-      <button class="w3-button w3-lightblue"  type="text"   onclick="myfunction4()">LIKE</button> 
+      <button class="w3-button w3-lightblue"  type="text" id="btn3"  onclick="myfunction4()">LIKE</button> 
      <br/>
       </div>
      </div>
