[imad-console] Updates ui/profile.html

--- a/ui/profile.html
+++ b/ui/profile.html
@@ -43,7 +43,7 @@
     </div>
     <hr>
     <div class="vj3">
-    <button type=text onclick="myfunction()"  ><strong>View Quotes</strong></button>
+    <button class="vijay1" type=text onclick="myfunction()"  ><strong>View Quotes</strong></button>
     <p id ="demo1"><a id ="man1" href="https://www.brainyquote.com/topics/link"></a></p>
    
     
