[imad-console] Updates ui/profile.html

--- a/ui/profile.html
+++ b/ui/profile.html
@@ -62,7 +62,7 @@
     
      </div>
       <input type="button" value="Feedback" onclick="myfunction5()" id="submit_btn" >
-    <textarea row="4" columns="8" value="Write Something"></textarea>
+    <input  type="text" id="name" placeholder="Something about you"  >
         <p id="Krina">
          
             </p>
