[imad-console] Updates ui/profile.html

--- a/ui/profile.html
+++ b/ui/profile.html
@@ -64,7 +64,7 @@
      </div>
       <input type="button" value="Feedback" onclick="myfunction5()" id="submit_btn" >
        <br/>
-    <textarea  type="text" id="name" placeholder="Something about you"  rows="4" columns="6"></textarea>
+    <textarea  type="text" id="name"   rows="4" columns="6">Something about you</textarea>
         <p id="Krina">
          
             </p>
