[imad-console] Updates ui/profile.html

--- a/ui/profile.html
+++ b/ui/profile.html
@@ -103,7 +103,7 @@
        if (n4==="/"){
            n3=n1 /n2;
        }
-      if(parseInt(prompt(""))=== null){
+      if(parseInt(prompt(null))){
            
            console.log( "The result is undefined")
        }
