[imad-console] Updates ui/profile.html

--- a/ui/profile.html
+++ b/ui/profile.html
@@ -86,6 +86,9 @@
         var n1=parseInt(prompt("ENTER THE FIRST NUMBER",n5))
        if(n1===""){
             document.getElementById("demo2").innerHTML ="the result is undefined"
+       }
+       
+       else if(n1){
        var n4=prompt("MODE OF OPERATION")
         var n2 =parseInt( prompt("ENTER THE SECOND NUMBER "));
         var n3;
