[imad-console] Updates ui/profile.html

--- a/ui/profile.html
+++ b/ui/profile.html
@@ -87,7 +87,7 @@
         var n1=parseInt(prompt("ENTER THE FIRST NUMBER",n5))
        var krina1=document.getElementById("krina1")
        if(n1===""){
-            krina1.innerHTML ="the result is undefined"
+            console.log("heloo")
        }
        
        else if(n1){
