--- a/ui/profile.html
+++ b/ui/profile.html
@@ -84,7 +84,7 @@
         document.getElementById("man").innerHTML ="<br/><strong>EMAIL ID</strong>"
      }
      function myfunction3(){
-        var n5=''
+        var n5=parseInt('')
         var n1=parseInt(prompt("ENTER THE FIRST NUMBER",n5))
        var krina1=document.getElementById("krina1")
        if(n1===""){
