[imad-console] Updates ui/profile.html

--- a/ui/profile.html
+++ b/ui/profile.html
@@ -94,7 +94,7 @@
       
        else if(n1){
        var n5=''
-       var n4=prompt("MODE OF OPERATION",n5))
+       var n4=prompt("MODE OF OPERATION",n5)
         if(n4===""){
            
        }
