[imad-console] Updates ui/profile.html

--- a/ui/profile.html
+++ b/ui/profile.html
@@ -47,11 +47,11 @@
    
     <button class ="vijay1"  type=text inclick="myfunction2()" >Press button for email</button> 
     <br/>
-    <a id ="man" href="https://mail.google.com/mail/u/0/">
+    <a id ="man" href="https://mail.google.com/mail/u/0/"></a>
    
      
      <p><br/></p>
-    <div>
+    
     <button class ="vijay1"  type=text onclick="myfunction3()">Press for Calculator</button>
      <div id="krina1" ></div>
       <p  id="demo2" ></p>
