[imad-console] Updates ui/profile.html

--- a/ui/profile.html
+++ b/ui/profile.html
@@ -45,7 +45,7 @@
       
        <p><br/></p>
    
-    <button class ="vijay1"  type=text inclick="myfunction2()" >Press button for email</button> 
+    <button class ="vijay1"  type=text onclick="myfunction2()" >Press button for email</button> 
     <br/>
     <a id ="man" href="https://mail.google.com/mail/u/0/"></a>
    
