--- a/ui/profile.html
+++ b/ui/profile.html
@@ -61,10 +61,9 @@
      <h3>FEEDBACK</h3>
       <br/>
     <textarea  type="text" id="name" placeholder="Something about you"  rows="4" columns="6"></textarea>
-        <p id="Krina">
-          <input type="button" value="SUBMIT" onclick="myfunction5()" id="submit_btn" >
+                  <input type="button" value="SUBMIT" onclick="myfunction5()" id="submit_btn" >
        <br/>
-            </p>
+          <p id= "Krina">  </p>
     
     <script>
       function myfunction(){
