--- a/ui/profile.html
+++ b/ui/profile.html
@@ -16,7 +16,7 @@
       <div class ="vj3 ">
       <span id="can">0</span>
        <br/>
-         <button   type="text"  onclick="myfunction4()">LIKE</button> 
+         <button id="can1"  type="text"  onclick="myfunction4()">LIKE</button> 
          <br/>
       </div>
     
@@ -61,7 +61,8 @@
      <h3>FEEDBACK</h3>
       <br/>
     <textarea  type="text" id="name" placeholder="Something about you"  rows="4" columns="6"></textarea>
-                  <input type="button" value="SUBMIT" onclick="myfunction5()" id="submit_btn" >
+              <br/>  
+                 <input type="button" value="SUBMIT" onclick="myfunction5()" id="submit_btn" >
        <br/>
           <p id= "Krina">  </p>
     
