[imad-console] Updates ui/profile.html

--- a/ui/profile.html
+++ b/ui/profile.html
@@ -39,7 +39,7 @@
     <div >
     <button class="vijay1" type=text onclick="myfunction()"  ><strong>View Quotes</strong></button>
 
-   
+   <p id="demo1"></p>
     
     <button class="vijay1" type=text onclick="myfunction1()"  ><strong>Hide Quotes</strong></button>
       
