[imad-console] Updates ui/profile.html

--- a/ui/profile.html
+++ b/ui/profile.html
@@ -37,7 +37,7 @@
     <h1>CLICKS FOR FUN</h1>
     <br/>    
     <div >
-    <button class="vijay1" type=text onclick="myfunction()"  ><strong>View Quotes</strong></button> <button class="hide" type=text onclick="myfunction1()"  ><strong>Hide Quotes</strong></button>
+    <button class="show" type=text onclick="myfunction()"  ><strong>View Quotes</strong></button> <button class="hide" type=text onclick="myfunction1()"  ><strong>Hide Quotes</strong></button>
 
    <p id="demo1"></p>
     
