[imad-console] Updates ui/profile.html

--- a/ui/profile.html
+++ b/ui/profile.html
@@ -43,13 +43,13 @@
     <div>
       <p><br/></p>
    
-      <button class ="vijay1"  type=text onclick="myfunction2()" >GO TO GMAIL</button> 
+      <button class ="vijay1"  type=text onclick="myfunction2()" ><strong>GO TO GMAIL</strong></button> 
       <br/>
       <a id ="man" href="https://mail.google.com/mail/u/0/"></a>
    
       <p><br/></p>
     
-      <button class ="vijay1"  type=text onclick="myfunction3()">Press for Calculator</button>
+      <button class ="vijay1"  type=text onclick="myfunction3()" ><strong>Press for Calculator</strong></button>
       <div id="krina1" ></div>
         <p  id="demo2" ></p>
         <br/>
@@ -57,7 +57,7 @@
      </div>
      <h3>FEEDBACK</h3>
      <br/>
-     <textarea  type="text" id="name" placeholder="Something about you"  rows="4" columns="6"></textarea>
+     <textarea  type="text" id="name" placeholder="Something about you"  rows="4" columns="10"></textarea>
               <br/>  
               <input type="button" value="SUBMIT" onclick="myfunction5()" id="submit_btn" >
      <br/>
