[imad-console] Updates ui/profile.html

--- a/ui/profile.html
+++ b/ui/profile.html
@@ -43,7 +43,7 @@
     <div>
       <p><br/></p>
    
-      <button class="hide" type=text onclick="myfunction6()"  ><strong>X</strong></button>  <button class ="vijay1"  type=text onclick="myfunction2()" ><strong>GO TO GMAIL</strong></button> 
+      <button class="hide" type=text onclick="myfunction6()"  ><strong>X</strong></button>  <button class ="show"  type=text onclick="myfunction2()" ><strong>GO TO GMAIL</strong></button> 
       <br/>
       <a id ="man" href="https://mail.google.com/mail/u/0/"></a>
    
