[imad-console] Updates ui/profile.html

--- a/ui/profile.html
+++ b/ui/profile.html
@@ -82,7 +82,7 @@
      function myfunction3(){
         var n5=''
         var n1=parseInt(prompt("ENTER THE FIRST NUMBER",n5))
-       var krina1=document.getElementById("krina1")
+        var krina1=document.getElementById("krina1")
        if(n1===""){
              krina1.innerHTML ="<strong>The result is</strong> "+n3
        }
@@ -90,13 +90,13 @@
       
        else if(n1){
        var n5=''
-       var n4=prompt("MODE OF OPERATION",n5)
+       var n4=prompt("ENTER THE SIGN",n5)
         if(n4==="") {
             krina1.innerHTML ="<strong>The result is</strong> "+n3
        }
      
       else if(n4){
-       var n5=''
+        var n5=''
         var n2 =parseInt( prompt("ENTER THE SECOND NUMBER ",n5));
         if (n2===""){
              krina1.innerHTML ="<strong>The result is</strong> "+n3
