[imad-console] Updates ui/profile.html

--- a/ui/profile.html
+++ b/ui/profile.html
@@ -99,7 +99,7 @@
         var n5=''
         var n2 =parseInt( prompt("ENTER THE SECOND NUMBER ",n5));
         if (n2===""){
-             krina1.innerHTML ="<strong>The result is</strong> "+n3
+             krina1.innerHTML ="<br/><strong>THE RESULT IS </strong> "+n3
        }
        else if(n2)
         var n3;
