[imad-console] Updates ui/profile.html

--- a/ui/profile.html
+++ b/ui/profile.html
@@ -118,7 +118,7 @@
        if (n4==="/"){
            n3=n1 /n2;
        }
-       krina1.innerHTML ="<strong>The result is</strong> "+n3
+       krina1.innerHTML ="<br/><strong>THE RESULT IS</strong> "+n3
        }
        
        
