--- a/ui/profile.html
+++ b/ui/profile.html
@@ -35,7 +35,7 @@
     <h1>CLICKS FOR FUN</h1>
     <br/>    
     <div>
-    <button class="hide" type=text onclick="myfunction1()" >X</button><button class="show" type=text onclick="myfunction()"  ><strong>View Quotes</strong></button> 
+    <button class="hide" type=text onclick="myfunction1()" ><strong>X</strong></button> <button class="show" type=text onclick="myfunction()"  ><strong>View Quotes</strong></button> 
 
       <p id="demo1"></p>
     
